--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,19 @@
 <resources>
     <color name="colorPrimary">#0071BC</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#4fb3bf</color>
+    <color name="colorAccent">#850071BC</color>
     <color name="statusBarColor">#006064</color>
-    <color name="textColorPrimary">#121212</color>
+    <color name="textColorPrimary">#1f1f1f</color>
+    <color name="textColorSecondary">#7f7f7f</color>
     <color name="white">#FFFFFF</color>
+    <color name="light_gray">#99afafaf</color>
+    <color name="dividerColor">#e5e5e5</color>
     <color name="loginIconsColor">#aeaeae</color>
     <color name="backgroundColor">#006064</color>
+    <color name="cardFrameColor">#bababa</color>
+    <color name="toolbarTextColor">#7f7f7f</color>
+    <color name="red">#99a20000</color>y
+    <color name="green">#9900a200</color>
+    <color name="background">#DADDEC</color>
+
 </resources>
