--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="btn_text_size">18sp</dimen>
     <dimen name="medium_text_size">16sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="card_padding">50dp</dimen>
-    <dimen name="card_title_text_size">18sp</dimen>
+    <dimen name="fragment_padding">58dp</dimen>
+    <dimen name="fragment_title_text_size">18sp</dimen>
+    <dimen name="toolbar_title_text_size">20sp</dimen>
 </resources>
