--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="fragment_padding">58dp</dimen>
     <dimen name="fragment_title_text_size">18sp</dimen>
     <dimen name="toolbar_title_text_size">20sp</dimen>
+    <dimen name="small_text_size">14sp</dimen>
+    <dimen name="large_text_size">28sp</dimen>
 </resources>
